Create div ssize tracker component

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "div-size-tracker",
+  "name": "react-div-size-tracker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
